Closed
Bug 389659
Opened 18 years ago
Closed 18 years ago
Scrollbar dragging broken when using fullZoom != 1.0
Categories
(Core :: Layout, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: sylvain.pasche, Assigned: sharparrow1)
References
Details
Attachments
(1 file)
1.74 KB,
patch
|
roc
:
review+
roc
:
superreview+
dbaron
:
approval1.9+
|
Details | Diff | Splinter Review |
Steps to Reproduce:
1. Change the fullZoom on a page, so that you can see horizontal/vertical scrollbars. I used "getBrowser().markupDocumentViewer.fullZoom = 2" in the JavaScript Shell.
2. Try to scroll horizontally/vertically by dragging the scrollbar
3. See how the scrollbar does not follow the mouse movements.
I could reproduce this on Windows and Linux, so that should be a rather cross-platform issue.
Comment 1•18 years ago
|
||
It does kind of work, but you have to drag further until something happens. If you grab the vertical scrollbar and move it to the bottom, nothing happens at first. But as you drag further to the bottom, the page starts scrolling.
By the way, I use this in Firefox's error console:
top.window.opener.getBrowser().markupDocumentViewer.fullZoom = 2;
Assignee | ||
Comment 2•18 years ago
|
||
I'm not sure where exactly that math was messing up, but I don't really care.
Attachment #274065 -
Flags: superreview+
Attachment #274065 -
Flags: review?(roc)
Attachment #274065 -
Flags: review+
Updated•18 years ago
|
Keywords: checkin-needed
Assignee | ||
Comment 3•18 years ago
|
||
Please don't add checkin-needed to my bugs... the reason I haven't checked this in is that the tree is closed.
Keywords: checkin-needed
Assignee | ||
Comment 4•18 years ago
|
||
Comment on attachment 274065 [details] [diff] [review]
Patch
Patch makes scrollbars use standard utility method to calculate coordinates; unlikely to cause regressions.
Attachment #274065 -
Flags: approval1.9?
Assignee | ||
Updated•18 years ago
|
Component: GFX → Layout: Misc Code
QA Contact: general → layout.misc-code
Comment on attachment 274065 [details] [diff] [review]
Patch
a19=dbaron
Attachment #274065 -
Flags: approval1.9? → approval1.9+
Assignee | ||
Comment 6•18 years ago
|
||
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Updated•7 years ago
|
Product: Core → Core Graveyard
Updated•7 years ago
|
Component: Layout: Misc Code → Layout
Product: Core Graveyard → Core
You need to log in
before you can comment on or make changes to this bug.
Description
•