Bug 389659: Scrollbar dragging broken when using fullZoom != 1.0.  r+sr=roc, a19=dbaron